<resources>
    <string name="app_name">Yuk Bisa Yuk</string>
    <string name="server_connection_error">Server connection error</string>
    <string name="network_server_not_available">Server Not Available</string>
    <string name="network_internal_error">Internal Error</string>
    <string name="network_connection_error">Connection Error</string>
    <string name="network_default_error">Default Error</string>
    <string name="yuk_bisa_yuk_team">Yuk Bisa Yuk Team</string>
    <string name="donasi_sekarang">Donasi Sekarang</string>
    <string name="cerita">Cerita</string>
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="masukkan_nominal_donasi">Masukkan Nominal Donasi</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="donasi">Donasi</string>
    <string name="pilihan_donasi">Pilihan Donasi</string>
    <string name="yukbisayuk">#YukBisaYuk</string>
    <string name="dummy_title_donation">Bangun Madrasah Pertama untuk Pelosok NTT</string>
    <string name="dummy_current_target_donation">Rp 114.017 terkumpul dari Rp 474.466</string>
    <string name="history">History</string>
    <string name="loading">loading</string>
    <string name="terima_kasih_sudah_berdonasi">Terima kasih sudah berdonasi dan meringankan beban mereka</string>
    <string name="donasi_berhasil">Donasi Berhasil</string>
    <string name="ke_beranda">Kembali ke Beranda</string>
    <string name="lihat_riwayat_transaksi">Lihat Riwayat Donasi</string>
    <string name="dummy_date">25 Januari 2021</string>
    <string name="dummy_nominal">Rp 50,000</string>
    <string name="login">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="lbl_ok">OK</string>
    <string name="ooops">Ooops</string>
    <string name="tidak_ada_data">Tidak ada data</string>
    <string name="detail_donasi">Detail Donasi</string>
    <string name="more">More</string>
    <string name="log_out">Log Out</string>
    <string name="urutkan">Urutkan</string>
</resources>